# openexchangerate-rs

./: Cargo.toml  README.md
examples/: convert.rs  currencies.rs  from_env.rs  historical_rates.rs  latest_rates.rs
src/: client.rs  error.rs  lib.rs  models.rs
src/models/: conversion.rs  latest.rs  rates.rs
